# Glassy

./: Justfile  README.md  build.txt  change_time.py  delete.py  firmwares.py  main.py  programs.py  pyproject.toml  requirements.txt  utils.py
screens/: apps_page.ui  changedate_page.ui  device_page.ui  firmwares.ui  searching_page.ui  uninstall_page.ui  updating_page.ui
